Version 4.7 -    Jan 2011, by Per Øyvind Karlsen

- add URPM::DB::info() to return berkeley db type & endianness

Version 4.6 - 11 Jan 2011, by Per Øyvind Karlsen

- revert missing db environment hack, proper fix has been done in rpm now
- drop deprecated URPM::Pkg->header_filename
- make URPM::Pkg->filename properly return the filename in synthesis, rather
  than trying to generate it from NVRA
- add URPM::DB::close()

Version 4.5 -  9 Jan 2011, by Per Øyvind Karlsen

- ensure that a db environment with config & required directories exists for
  chroots before opening the rpmdb

Version 4.4 -  6 Jan 2011, by Per Øyvind Karlsen

- check URPM::Transactin::add() for errors and return them if any (#61746)
- make URPM::Package::get_tag() & URPM::Package::get_tag_modifiers() accept
  string name of tags
- URPM::DB::traverse_tag() & URPM::DB::traverse_tag_find() will now accept
  all available rpm tags

Version 4.3 - 11 Dec 2010, by Per Øyvind Karlsen

- fix issue with packages added to synthesis having disttag/disttag, but without
  those added to NVRA, leading to segfault
- fix broken support for parsing hdlists, use rpmgi iterator from rpmlib to
  simplify code and get packages ordered as an extra benefit in the process.
- URPM::Package::fullname will now always return six items for array in stead
  of four to make room for disttag & distepoch, arch will still be returned as
  last item (ie. array[5] in stead of array[3]) (#61702)
- URPM::Package::files_md5sum() has been renamed to URPM::Package::files_digest()
- fix NEVRA parsing of 'gpg-pubkey'

Version 4.2 -  3 Dec 2010, by Per Øyvind Karlsen

- fix URPM::Package::files()

Version 4.1 - 19 Nov 2010, by Per Øyvind Karlsen

- improve return value checking on headerGet() usage
- fix update_provides_files with RPMTAG_OLDFILENAMES
- ditch legacy compatibility use of headerPut() on FILENAME_TAG
 
Version 4.0 - 11 Nov 2010, by Per Øyvind Karlsen

- add support for uncompressed & xz/lzma compressed synthesis